Change class name from 'Main' to 'main'

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel= "stylesheet" href="/Users/lukewarrior/Documents/Coding/projects/warrdev/resources/css/index.css" type="text/css">
 </head>
 <body>
-    <div class="Main">
+    <div class="main">
         <div class="banner">
             <h1>Luke Warrior</h1>
         </div>
