--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <div class="main">
         <div class="banner">
+            <img src="/Users/lukewarrior/Documents/Coding/github/warrdev/resources/face.png" alt="a cartoon image of a person">
             <h1>Luke Warrior</h1>
         </div>
         <div class="nav">
