Update image source path in index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="main">
         <div class="banner">
-            <img src="/Users/lukewarrior/Documents/Coding/github/warrdev/resources/face.png" alt="a cartoon image of a person">
+            <img src="resources/face.png" alt="a cartoon image of a person">
             <h1>Luke Warrior</h1>
         </div>
         <div class="nav">
