--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <h1>Luke Warrior</h1>
         </div>
         <div class="nav">
-            <p>Home</p>
-            <p>About Me</p>
-            <p>Projects</p>
+            <a class="zoom" href="#">Home</a>
+            <a class="zoom" href="#">About Me</a>
+            <a class="zoom" href="#">Projects</a>
     </div>
     </div>
 </body>
