--- a/projects.html
+++ b/projects.html
@@ -7,18 +7,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel= "stylesheet" href="resources/css/index.css" type="text/css">
+    <link rel= "stylesheet" href="resources/css/about-me.css" type="text/css">
 </head>
 <body>
     <div class="main">
         <div class="banner">
-            <img src="resources/face.png" alt="a cartoon image of a person">
+            <img src="resources/face.png" alt="a cartoon image of a person with a cap on">
             <h1>Luke Warrior</h1>
         </div>
         <div class="nav">
             <a class="zoom" href="index.html">Home</a>
             <a class="zoom" href="about-me.html">About Me</a>
             <a class="zoom" href="projects.html">Projects</a>
+        </div>
+        <div class="content">
+            <h2>Projects</h2>
         </div>
     </div>
 </body>
