Add project section to projects.html, enhance CSS styles, and include VAT logo

--- a/projects.html
+++ b/projects.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Warr Dev</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel= "stylesheet" href="resources/css/about-me.css" type="text/css">
-</head>
-<body>
-    <div class="main">
-        <div class="banner">
-            <img src="resources/face.png" alt="a cartoon image of a person with a cap on">
-            <h1>Luke Warrior</h1>
-        </div>
-        <div class="nav">
-            <a class="zoom" href="index.html">Home</a>
-            <a class="zoom" href="about-me.html">About Me</a>
-            <a class="zoom" href="projects.html">Projects</a>
-        </div>
-        <div class="content">
-            <h2>Projects</h2>
-        </div>
-    </div>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Warr Dev</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+        <link rel= "stylesheet" href="resources/css/projects.css" type="text/css">
+    </head>
+    <body>
+        <div class="main">
+            <div class="banner">
+                <img src="resources/face.png" alt="a cartoon image of a person with a cap on">
+                <h1>Luke Warrior</h1>
+            </div>
+            <div class="nav">
+                <a class="zoom" href="index.html">Home</a>
+                <a class="zoom" href="about-me.html">About Me</a>
+                <a class="zoom" href="projects.html">Projects</a>
+            </div>
+            <div class="content">
+                <h2>Projects</h2>
+                <div class="project-tile">
+                    <a href="#"><img src="resources/vat-logo.png" alt="a logo of a calculator with the letters VAT on it"></a>  
+                    <h3>VAT Calculator</h3>
+                </div>
+            </div>
+        </div>    
+    </body>
 </html>
