--- a/projects.html
+++ b/projects.html
@@ -22,9 +22,13 @@
             </div>
             <div class="content">
                 <h2>Projects</h2>
-                <div class="project-tile">
+                <div class="project-card">
                     <a href="#"><img src="resources/vat-logo.png" alt="a logo of a calculator with the letters VAT on it"></a>  
                     <h3>VAT Calculator</h3>
+                </div>
+                <div class="project-card">
+                    <a href="#"><img src="resources/website-logo.png" alt="a logo of a globe with the letters WWW. on it"></a>  
+                    <h3>lukewarrior.dev</h3>
                 </div>
             </div>
         </div>    
