Add blog section with new blog.html and hello-world.html files; update navigation links and styles

--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Warr Dev</title>
+        <title>Luke Warrior</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
@@ -19,6 +19,7 @@
                 <a class="zoom" href="index.html">Home</a>
                 <a class="zoom" href="about-me.html">About Me</a>
                 <a class="zoom" href="projects.html">Projects</a>
+                <a class="zoom" href="blog.html">Blog</a>
             </div>
             <div class="content">
                 <h2>Projects</h2>
