--- a/hello-world.html
+++ b/hello-world.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel= "stylesheet" href="resources/css/blog.css" type="text/css">
 </head>
 <body>
@@ -21,21 +22,23 @@
             <a class="zoom" href="projects.html">Projects</a>
             <a class="zoom" href="blog.html">Blog</a>
         </div>
-        <div class="content-header">
-            <h2>Hello World!</h2>
-            <p>Posted on January 9, 2025 by Luke Warrior</p>
-        </div>
         <div class="content">
+            <h2>Hello World!</h2>
+            <p class="date">01/09/2025</p>
             <p> 
-                Hello, my name is Luke Warrior and welcome to my new blog. This is more of a project to add further content to my website and further solidify my knowledge as opposed to being something people will actually read but you never know 
-                I might end up enjoying writing my thoughts down for other people to read. I have a few passions which i enjoy including cycling, web development, gaming and coffee (dont ask).
+                Hello, my name is Luke Warrior and welcome to my new blog. This is more of a project to add further content to my website, and further solidify my knowledge, 
+                as opposed to being something people will actually read. However, you never know I might end up enjoying writing my thoughts down for other people to read. 
+                I have a few passions which I enjoy including cycling, web development, gaming and coffee (dont ask).
             </p>
             <p>
-                Given this is more of a test than an actual post I will leave this here and this will be my template for future posts (assuming there are any).
-                Thanks for reading Paul, likely the only person who will ever see this. 
+                Given this is more of a test than an actual post, I will leave this here and this will be my template for future posts (assuming there are any). 
+                Thanks for reading Paul, likely the only person who will ever see this.
             </p>
             <p>
-                Over and Out
+                Over and Out.
+            </p>
+            <p>
+                ~Luke
             </p>
         </div>
     </div>
